src/test/ui/compare-method/region.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/region.rs:21:5
   |
16 |     fn foo();
   |     --------- definition of `foo` from trait
...
21 |     fn foo() where 'a: 'b { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `'a: 'b`

error: aborting due to previous error

